--- a/Front/UltraEventos-App/src/app/app.component.html
+++ b/Front/UltraEventos-App/src/app/app.component.html
@@ -1,8 +1,9 @@
+<app-nav>Navbar</app-nav>
+
 <div class="container text-center">
-  <h1>Eventos</h1>
+  <h2>Eventos</h2>
+  <hr>
   <app-eventos></app-eventos>
 
-  <h1>Palestrantes</h1>
-  <app-palestrantes></app-palestrantes>
 </div>
 <router-outlet></router-outlet>
