--- a/Front/UltraEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/UltraEventos-App/src/app/eventos/eventos.component.html
@@ -1,10 +1,53 @@
-<h1>Eventos</h1>
+<h2>Eventos</h2>
+<hr>
 
-
-
-<div *ngFor="let evento of eventos">
-  <p><b>Tema:</b>{{evento.tema}}</p>
-  <p><b>Local:</b>{{evento.local}}</p>
-  <hr>
+<div class="form-inline">
+  <div class="form-group mb-2">
+    <input type="text" class="form-control mr-2"
+    placeholder="buscar"
+    [(ngModel)]="filtro">
+    <button class="btn btn-outline-success">Buscar</button>
+  </div>
 </div>
 
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th><button class="btn btn-outline-light btn-sm" (click)="showImagem()">{{showImage ? 'ocultar' : 'exibir'}}</button></th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="eventos && eventos.length">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <td><img bind-collapse="!showImage"
+            bind-isAnimated="true"
+            src={{evento.imagemURL}} alt=""
+            bind-style.width.px="imgWidth"
+            bing-style.heigth.px="imgHeigth">
+      </td>
+      <td>{{evento.eventoId}}</td>
+      <td>{{evento.tema}}</td>
+      <td>{{evento.local}}</td>
+      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.qtdPessoas}}</td>
+      <td>{{evento.lote}}</td>
+      <td>
+        <button class="btn btn-primary btn-sm mr-2">Editar</button>
+        <button class="btn btn-danger btn-sm">Excluir</button>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot *ngIf="!eventos || !eventos.length">
+    <tr>
+      <td class="text" colspan="8">
+        <h4>Nenhum evento encontrado!</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
